# scopy-android-deps

./: .gitignore  .gitmodules  Dockerfile  README.md  android_cmake.sh  android_cmake_build.sh  android_cmake_scopy.sh  android_configure.sh  android_deploy_qt.sh  android_deps_build.sh  android_deps_download.sh  android_qt_initial_cmake_params  android_qt_initial_cmake_params.in  android_toolchain.sh  androiddeployqt_script.sh  build_androiddeployqt.sh  build_app_all.sh  build_deps_all.sh  build_host_python  build_host_python.sh  build_system_setup.sh  clone_and_build.sh  download_deps_src.sh  move_libs.sh  qwt_android.patch  rename_gradle.sh
docker/: Dockerfile
qtTest/: .gitignore  CMakeLists.txt  FftDisplayPlot.cc  README  TimeDomainDisplayPlot.cc  android_cmake.sh  android_deploy_qt.sh  config.h.cmakein  iiomanager.cpp  iiomanager.h  iiosourceui.cpp  iiosourceui.h  iiosourceui.ui  jnimessenger.cpp  jnimessenger.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  measure.cpp  oscilloscope_plot.cpp  plotinstrument.cpp  plotinstrument.h  plotinstrument.ui  stream_to_vector_overlap_impl.cc  veciiosource.cpp  veciiosource.h  veciiosource.ui  vectordatasourceui.cpp  vectordatasourceui.h  vectordatasourceui.ui  wavsourceui.cpp  wavsourceui.h  wavsourceui.ui
qtTest/android/: AndroidManifest.xml
qtTest/logicanalyzer/: annotationcurve.cpp  annotationdecoder.cpp  logicdatacurve.cpp  logicdatacurve.h
qtTest/logicanalyzer/binding/: decoder.cpp
qtTest/resources/: resources.qrc
